--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,17 +1,17 @@
 {
   "type": "postgres",
   "host": "localhost",  
-  "port": 5432,
+  "port": 5433,
   "username": "postgres",
   "password": "postgres",
-  "database": "sale_postgres",
+  "database": "ibuy_online",
   "migrations":[
-    "./src/database/migrations/.*ts"
+    "./src/database/migrations/*.ts"
   ],
   "cli":{ 
     "migrationsDir": "./src/database/migrations"
   },
   "entities": [ 
-    "./src/models/.*ts"
+    "./src/models/*.ts"
   ]
 }
