--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -20,6 +21,7 @@
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "eslint": "^7.19.0",
     "eslint-import-resolver-typescript": "^2.3.0",
